content provider dependency

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PetsShelter">
-        <activity android:name=".EditorActivity"
-            android:parentActivityName=".CatalogActivity"/>
+        <activity
+            android:name=".EditorActivity"
+            android:parentActivityName=".CatalogActivity" />
         <activity android:name=".CatalogActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".Data.PetProvider"
+            android:authorities="com.example.petsshelter"
+            android:exported="false" />
     </application>
 
 </manifest>
